{
    "name": "InputAsset",
    "maps": [
        {
            "name": "Web",
            "id": "6da2bf5b-221d-4323-9ba8-ec3a3aa302e0",
            "actions": [
                {
                    "name": "NumberOne",
                    "type": "Button",
                    "id": "cadcfec7-88c3-4080-a9fb-a844e8943074",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberTwo",
                    "type": "Button",
                    "id": "01397eb7-d6d5-4e0d-9129-794c0510dae4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberThree",
                    "type": "Button",
                    "id": "24a87e45-b54e-46b4-acc9-79f2a459a9fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberFour",
                    "type": "Button",
                    "id": "a6b1fc38-f267-4f61-9fce-b9e1fe719f2a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberFive",
                    "type": "Button",
                    "id": "372183b1-c73a-462a-a059-f839a4c787d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberSix",
                    "type": "Button",
                    "id": "879e93e1-e776-490f-a5ff-ada1d740b557",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberSeven",
                    "type": "Button",
                    "id": "c853a857-58aa-4658-b252-31ee4e599eca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberEight",
                    "type": "Button",
                    "id": "3bab2869-1158-43ec-b9ad-c76c7de6078f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberNine",
                    "type": "Button",
                    "id": "f9edae3b-4048-412e-ba90-71cf96f99c05",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberZero",
                    "type": "Button",
                    "id": "0f8f7f8a-90e5-4ab3-92ac-4aaf7ae83fd9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "0653153c-69ac-4994-85b1-c166f7cab28d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Clear",
                    "type": "Button",
                    "id": "27382dbb-83b5-4817-b289-878a208b153a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Delete",
                    "type": "Button",
                    "id": "58f884d0-7672-41a0-aee2-e7e89e623430",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NegativeSign",
                    "type": "Button",
                    "id": "95912087-be56-489f-9c5a-8ee1d5fcfdd6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d9a282fa-ab68-47fc-9151-33f557fcdd8b",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberOne",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bffc88bf-276e-4ea4-a33c-b4621872d5ce",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberTwo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b8544cd-12a2-4c05-8fae-79b1b1b4be95",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberThree",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53e2cfa6-62df-442a-bbbd-abfeeb999da2",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberFour",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7690a8ab-426f-4bf1-8053-d7918d1f7843",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberFive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "871cdc05-f66a-407f-adf8-657d16260527",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberSix",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ec0c065-739d-47b3-8311-eac230facd39",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberSeven",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ffae451a-047f-4659-97fa-50cadfeed938",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberEight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8270690-98c5-4f91-afaf-2d9d64881e78",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberNine",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a09525d-375f-4d6c-ac82-dc81753854f5",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberZero",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f95393b1-bd8c-497f-8cb0-9ba5cfc06317",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19d71ae0-65de-4de9-b635-8dfb9cf06938",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Clear",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "506b4e1e-fd12-4808-9196-7e8bbbd03660",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Delete",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c4e5636-ce4b-4eac-8ba2-3f11ca52f15e",
                    "path": "<Keyboard>/minus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NegativeSign",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MouseDrawing",
            "id": "d7c564d6-1d35-4d67-a45e-74b5c36f871f",
            "actions": [
                {
                    "name": "DrawLine",
                    "type": "Button",
                    "id": "d6aa5abb-cca6-411a-badd-b0372678dc79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "88d97901-574b-4643-a67c-6bb8451545ea",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DrawLine",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}